[package]
name = "jsonwebtoken"
version = "7.0.0-alpha.1"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way."
homepage = "https://github.com/Keats/jsonwebtoken"
repository = "https://github.com/Keats/jsonwebtoken"
keywords = ["jwt", "web", "api", "token", "jwk"]
edition = "2018"

[features]
default = ["std"]
std = ["ring/std", "serde/std"]

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"] }
ring = { version = "0.16.5" }
base64 = "0.11"
# For PEM decoding
pem = "0.7"
simple_asn1 = "0.4"
hashbrown = { version = "0.6", features = ["serde"] }
cfg-if = "0.1"

[dev-dependencies]
# For the custom chrono example
chrono = "0.4"

[badges]
maintenance = { status = "passively-maintained" }
